@@ -1,3 +1,6 @@
+Features:
+ * Item selection will open the item in the environment tree.
+
 -------------------------
  v1.2.0 (2020-05-10)
 -------------------------
